--- a/client/src/Components/css/InsuranceComp.css
+++ b/client/src/Components/css/InsuranceComp.css
@@ -3,3 +3,9 @@
     width: 400px;
     background-color: #7ca9d3;
 }
+.containerInsurance{
+    text-align: center;
+    font-size: 152px;
+    background: black;
+    background-color: green;;
+}
